--- a/week05/day05/cupcakes/package.json
+++ b/week05/day05/cupcakes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movies",
+  "name": "cupcakes",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
-    "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.12.1"
   }
